# shashki-ai

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: board.ods  improvements.md  minimax_negamax_comp.ods  weighting_scheme.ods
experimental/catboost_for_value_func/: README.md  train.cd
experimental/catboost_for_value_func/include/: learn_value_func.h
experimental/catboost_for_value_func/src/: valuation_catboost.cc
experimental/catboost_for_value_func/src/learn_value_func/: catboost_tester.cc  mc.cc
experimental/cmaes_for_value_func/src/: coevolution.cc  evolution.cc  valuation_cmaes.cc
experimental/cmaes_for_value_func/src/cmaes/: Makefile.in  cmastrategy.cc
experimental/cmaes_for_value_func/src/libcmaes/: cmaes_export.h  libcmaes_config.h  libcmaes_config.h.in
experimental/legacy/: minimax.cc  negascout.cc
include/: _board_internal.h  board.h  contest.h  game.h  game_history.h  game_stats.h  rest_api.h  shared.h  strategies.h  tests.h  valuation.h
python/: README.md  requirements.txt
python/codegen/: generate_do_move.py  generate_valid_moves.py  shared.py
python/codegen/templates/: do_move.cc.in  valid_capturing_moves_from.cc.in  valid_moves.cc.in
python/gameplay/: adb_wrapper.py  board_screen.py  main.py  plot_tournament_results.py  shared.py  start.sh  templates.py  tournament_result_screen.py  tournament_stats.py
python/gameplay/templates/: meta.json
src/: board.cc  contest.cc  game.cc  game_history.cc  game_stats.cc  main.cc  rest_api.cc  valuation.cc
src/strategies/: negamax_ab.cc  random.cc
src/tests/: do_move_alternate_impl.cc  tests.cc  valid_moves_alternate_impl.cc
web/tree_viz/: index.html  styles.css
web/tree_viz/src/: shared.js  tree_data.js  tree_diagram.js
